# WartHogWarfare

Warhog-Warfare-Test/: CMakeLists.txt  README.txt
Warhog-Warfare-Test/Assets/Concept/: BackAsset.txt
Warhog-Warfare-Test/Assets/Main/Clusters/: README.txt
Warhog-Warfare-Test/Assets/Main/Units/DEFUnit/: README.txt
Warhog-Warfare-Test/GameEngine/: CivilWarTagGenerator.cpp  CivilWarTagGenerator.py  MainCombatSYS.cpp  MainCombatSYS.py  NationsTags.cpp  NationsTags.py  UnitsList.hpp  UnitsList.py  game_core.py  map_system.py
Warhog-Warfare-Test/GameEngine/MapSYS/: MapSupply
